# Cylium

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  gitignore
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-documentation---tutorial.md
.github/workflows/: rust.yml
benchmarks/: bench.sh  main.cxx  main.cyl  main.lua  main.py
compiler/src/: codegen.rs  compiler.rs  errors.rs  lexer.rs  parser.rs  types.rs  validator.rs
editor/: ABOUT.md  main.py
examples/: bitwise.cyl  circle.cyl  eratosthenes.cyl  fibonacci.cyl  hello_world.cyl  pythagoras.cyl  structures.cyl  system.cyl  time.cyl
github/ISSUE_TEMPLATE/: documentation-fix.md
interpreter/: Cargo.toml  build.sh  run.sh
interpreter/src/: bytecode.rs  errors.rs  file_handler.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  scope.rs  tokenizer.rs  types.rs  validator.rs
runtime/: runtime.c  runtime.h
tests/: first.cyl  main.cyl  vector.cyl
tests/conditions/: multi_line.cyl
tests/strings/: quotes.cyl  split.cyl  utf8.cyl
