[package]
name = "cylium"
version = "0.4.1"
authors = ["Ztry8 (AslanD)"] 
edition = "2024"
description = "Imperative, strongly typed scripting language"
documentation = "https://cylium.site/docs"
readme = "README.md"
homepage = "https://cylium.site/"
repository = "https://github.com/ztry8/cylium"
license = "Apache-2.0"
keywords = [
  "cylium",
  "scripting-language",
  "imperative",
  "strongly-typed",
  "interpreted",
  "minimalistic",
  "manual-memory"
]

[profile.release]
strip = true
debug = false
opt-level = 3
panic = "abort"
lto = "fat"          
codegen-units = 1
overflow-checks = false
incremental = false
